--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,5 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
     // New Material Design
-    implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation 'com.google.android.material:material:1.1.0'
 }
