--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rukayat_oyefeso.police_tracking_information">
 
-    <uses-feature android:name="android.hardware.camera"
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,14 +16,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Logout"></activity>
+        <activity android:name=".Help" />
+        <activity android:name=".About" />
+        <activity android:name=".CrimeNews" />
+        <activity android:name=".Settings" />
+        <activity android:name=".UserProfile" />
+        <activity android:name=".searchData" />
 
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="ocr" />
 
-        <activity android:name=".TextRecognizer"></activity>
+        <activity android:name=".TextRecognizer" />
         <activity android:name=".SetNewPassword" />
-        <activity android:name=".PoliceActivity" />
         <activity android:name=".policeForm" />
         <activity android:name=".VehicleOwnerForm" />
         <activity android:name=".forgetPassword" />
