--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,7 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.3'
 
+    //play services
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
 
 }
