--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,10 @@
         android:name="android.hardware.camera"
         android:required="true" />
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -33,7 +35,6 @@
         <activity android:name=".policeForm" />
         <activity android:name=".VehicleOwnerForm" />
         <activity android:name=".forgetPassword" />
-        <activity android:name=".UserRegisterForm" />
         <activity android:name=".Register" />
         <activity android:name=".login" />
         <activity android:name=".walkThroughScreen" />
