--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,5 +65,7 @@ dependencies {
 
     //play services
     implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
 
 }
