--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
+    //circle image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+
 
 }
