--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,6 @@ dependencies {
     //circle image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-
-
+    //About us dependencies
+    implementation 'com.github.medyo:android-about-page:1.3.1'  
 }
