--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MapActivity"></activity>
+        <activity android:name=".mainToolbar"></activity>
+        <activity android:name=".MapActivity" />
         <activity android:name=".Logout" />
         <activity android:name=".Help" />
         <activity android:name=".About" />
@@ -30,7 +31,6 @@
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="ocr" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDQEfXd7t0kTt65fQoqDr4ZvIYIeamFb7A" />
@@ -51,13 +51,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-<!--        <activity-->
-<!--            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"-->
-<!--            android:theme="@style/Base.Theme.AppCompat" />-->
-
-<!--        <meta-data-->
-<!--            android:name="preloaded_fonts"-->
-<!--            android:resource="@array/preloaded_fonts" />-->
     </application>
 
 </manifest>
