--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.1'
     implementation 'androidx.navigation:navigation-ui:2.3.1'
+    implementation 'com.google.firebase:firebase-storage:19.2.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -74,5 +75,14 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //About us dependencies
-    implementation 'com.github.medyo:android-about-page:1.3.1'  
+    implementation 'com.github.medyo:android-about-page:1.3.1'
+
+    //Picaso for image
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+    implementation 'androidx.navigation:navigation-fragment:2.3.3'
+    implementation 'androidx.navigation:navigation-ui:2.3.3'
 }
