--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Intro"></activity>
+        <activity android:name=".vehicleOwnerProfile"/>
+        <activity android:name=".Punishments" />
+        <activity android:name=".PayFine" />
+        <activity android:name=".Intro" />
         <activity android:name=".DetailedActivity" />
         <activity android:name=".mainToolbar" />
         <activity android:name=".MapActivity" />
@@ -57,6 +60,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
+        <activity android:name=".VehicleOwnerMainActivity" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
