--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,10 @@
 
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
-    <uses-feature android:name="android.hardware.fingerprint" android:required="true"
+
+    <uses-feature
+        android:name="android.hardware.fingerprint"
+        android:required="true"
         tools:ignore="DuplicateUsesFeature" />
 
     <application
@@ -32,7 +35,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FingerPrintAuthentication"></activity>
+        <activity android:name=".fineAddedSuccessful"></activity>
+        <activity android:name=".ticketCreated" />
+        <activity android:name=".addFine" />
+        <activity android:name=".viewFine" />
+        <activity android:name=".DisplayUserInfo" />
+        <activity android:name=".FingerPrintAuthentication" />
         <activity android:name=".vehicleOwnerProfile" />
         <activity android:name=".Punishments" />
         <activity android:name=".PayFine" />
@@ -51,6 +59,7 @@
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="ocr" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDQEfXd7t0kTt65fQoqDr4ZvIYIeamFb7A" />
