--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <uses-feature
@@ -35,8 +35,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".fineAddedSuccessful"></activity>
-        <activity android:name=".ticketCreated" />
+        <activity android:name=".payNow" />
+        <activity android:name=".fineAddedSuccessful" />
         <activity android:name=".addFine" />
         <activity android:name=".viewFine" />
         <activity android:name=".DisplayUserInfo" />
@@ -59,7 +59,6 @@
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="ocr" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDQEfXd7t0kTt65fQoqDr4ZvIYIeamFb7A" />
